--- a/rgti.tex
+++ b/rgti.tex
@@ -16,7 +16,7 @@
 \begin{document}
 \title{Navodila in osnutek prispevka za končno poročilo pri predmetu Računalniška grafika in tehnologija iger}
 
-\author{Ciril Bohak$^{1}$, Matija Marolt$^{2}$} % use ^1, ^2 for author(s) from different institutions
+\author{Benjamin Smrdeljk$^{1}$, Matija Marolt$^{2}$} % use ^1, ^2 for author(s) from different institutions
 
 \affiliation{	$^{1}$Univerza v Ljubljani, Fakulteta za računalništvo in informatiko \\ 
 				$^{2}$Univerza v Ljubljani, Fakulteta za računalništvo in informatiko }
