--- a/rgti.tex
+++ b/rgti.tex
@@ -14,7 +14,7 @@
 \renewcommand*{\footnotesize}{\oldfootnotesize\scriptsize}
 
 \begin{document}
-\title{Navodila in osnutek prispevka za končno poročilo pri predmetu Računalniška grafika in tehnologija iger}
+\title{Parkour Hour - Scenarij za igro}
 
 \author{Benjamin Smrdeljk$^{1}$, Matija Marolt$^{2}$} % use ^1, ^2 for author(s) from different institutions
 
